# PROJECT_AUTO

./: README.md  car_run.launch  sim_run.launch
ProjetAuto/: CMakeLists.txt  package.xml
ProjetAuto/src/: LidarDetect.cpp
darknet_ros/darknet_ros/: CMakeLists.txt
darknet_ros/darknet_ros/config/: ros.yaml
darknet_ros/darknet_ros/launch/: darknet_ros.launch
darknet_ros/darknet_ros/src/: YoloObjectDetector.cpp
darknet_ros/darknet_ros_msgs/msg/: BoundingBoxes.msg
project_auto/: CMakeLists.txt  package.xml  setup.py
project_auto/msg/: ControlMsg.msg  LaneDetectMsg.msg
project_auto/src/project_auto_packages/: LaneDetect_Lite.py  LaneDetection.py  SensorCmdMux.py  SimControl.py  joyStick.py  test_20d.py  test_8d.py
ros_opencv/: CMakeLists.txt  package.xml
ros_opencv/src/: opencv_subscriber.cpp
usb_cam/launch/: usb_cam-test.launch
usb_cam/nodes/: usb_cam_node.cpp
usb_cam/src/: usb_cam.cpp
