<?xml version="1.0"?>
<package format="2">
  <name>project_auto</name>
  <version>1.1.0</version>
  <description>The project_auto package</description>
  <maintainer email="skymap87@naver.com">HaJaeChang</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>darknet_ros</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>darknet_ros</build_export_depend>
  <build_export_depend>darknet_ros_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>darknet_ros</exec_depend>
  <exec_depend>darknet_ros_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <depend>sensor_msgs</depend>
  <depend>boost</depend>

  <export>
  </export>
</package>
